# COCK-AND-BALL

./: .clang-format  .gitignore  README.md  anton_code_style
cbt_ws/: CMakeLists.txt
cbt_ws/src/abstract_nodes/: CMakeLists.txt  package.xml
cbt_ws/src/abstract_nodes/example/: example_abstract_action.cpp  example_abstract_srvcli.cpp
cbt_ws/src/abstract_nodes/include/: abstract_action.hpp  abstract_action_server.hpp  abstract_action_state.h  abstract_action_state.hpp  abstract_node.h  abstract_node_description.h  abstract_node_exception.h  abstract_request.hpp  abstract_service.h  abstract_service.hpp  abstract_service_client.hpp  robot_executor.h
cbt_ws/src/abstract_nodes/src/: abstract_action_state.cpp  abstract_node.cpp  abstract_node_description.cpp  abstract_node_exception.cpp  abstract_service.cpp  robot_executor.cpp
cbt_ws/src/state_machine/: CMakeLists.txt  package.xml
cbt_ws/src/state_machine/example/: example_state_machine.cpp
cbt_ws/src/state_machine/include/: state_machine.h
cbt_ws/src/state_machine/src/: state_machine.cpp
cbt_ws/src/utils/: CMakeLists.txt  package.xml
cbt_ws/src/utils/example/: example_state_machine.cpp
cbt_ws/src/utils/include/: cock_and_ball_exception.h  robot_executor.h  signal_queue.hpp  state_machine.h  state_machine.hpp
cbt_ws/src/utils/src/: cock_and_ball_exception.cpp  robot_executor.cpp  state_machine.cpp
