<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abstract_nodes</name>
  <version>0.0.0</version>
  <description>abstract classes, base for all other nodes in project</description>
  <maintainer email="kirillarionov123456@gmail.com">kira</maintainer>
  <license>UNLICENCE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
